# ai_doc_assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  PLAN.md  README.md  TASKS.md  docker-compose.yml  pyproject.toml  run.sh  run_api.sh
.github/workflows/: ci.yml
data/: eval_scores.json  eval_scores_v3_baseline.json  eval_scores_v3_qr.json
docs/: test-queries.md
docs/decisions/: 001-embedding-model.md  002-chunk-strategy.md  003-vector-store.md  004-llm-provider.md  005-agent-pattern.md  006-tool-system.md  007-fastapi-async.md  008-tool-parameter-semantic-mismatch.md  009-chunk-fragmentation-merge.md  010-embedding-upgrade-v3.md  011-query-rewrite.md  012-reranker-selection.md  013-rrf-lightweight.md  014-client-role-split.md  015-document-extraction-architecture.md  README.md
docs/superpowers/specs/: 2026-06-30-rrf-lightweight-design.md
scripts/: evaluate_rag.py  reindex.py
src/agents/: react_agent.py
src/api/: __init__.py
src/api/routes/: chat.py  documents.py
src/api/schemas/: chat.py  documents.py
src/app/: ui.py
src/core/: __init__.py  agent.py  async_utils.py  config.py  exceptions.py  llm.py  logging.py  retry.py
src/infra/: __init__.py
src/ingestion/: __init__.py  chunker.py  cleaner.py  gov_parser.py  loader.py  web_loader.py
src/retrieval/: __init__.py  query_rewriter.py  reranker.py  rrf.py  vector_store.py
src/services/: document_service.py
src/tools/: __init__.py  base.py  calculator.py  rag_tool.py  registry.py
src/tools/impl/: rag_tool.py
tests/: test_chunker.py  test_documents.py  test_gov_parser.py  test_query_rewriter.py  test_react_agent.py  test_reranker.py  test_retrieval.py  test_rrf.py  test_web_loader.py
