[project]
name = "ai-doc-assistant"
version = "0.2.0"
description = "AI 文档助手 — 基于 RAG 和 Agent 的智能知识库"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.0.0",
    "chromadb>=0.5.0",
    "streamlit>=1.30.0",
    "python-dotenv>=1.0.0",
    "pypdf>=5.0.0",
    "sentence-transformers>=5.5.1",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.0",
    "tenacity>=9.0.0",
    "structlog>=25.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.9.0",
]

[tool.ruff]
exclude = [".github"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]