[project]
name = "ai-doc-assistant"
version = "0.2.0"
description = "市场监管办事导办助手 — 基于 RAG 和 Agent 的政务智能导办"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.0.0",
    "chromadb>=0.5.0",
    "streamlit>=1.30.0",
    "python-dotenv>=1.0.0",
    "pypdf>=5.0.0",
    "sentence-transformers>=5.5.1",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.0",
    "tenacity>=9.0.0",
    "structlog>=25.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.9.0",
    "ragas>=0.4,<0.5",
    "langchain-openai>=0.3.0",
    "langchain-community>=0.3,<0.4",
]

[tool.ruff]
exclude = [".github"]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
